--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
                 <div class="row align-items-center section-item">
                     <div class="col-xs-12 col-md-3 col-lg-4 col-wrapper">
                         <div class="figure">
-                            <a href="https://arxiv.org/abs/1908.03835"><img src="images/icip.png" alt="AutoGAN"></a>
+                            <a href="https://ieeexplore.ieee.org/document/8803660?denied="><img src="images/icip.png" alt="AutoGAN"></a>
                         </div>
                     </div>
                     <div class="col-xs-12 col-md-9 col-lg-8 col-wrapper">
@@ -195,7 +195,7 @@
                 <div class="row align-items-center section-item">
                     <div class="col-xs-12 col-md-3 col-lg-4 col-wrapper">
                         <div class="figure">
-                            <a href="http://iccv2019.thecvf.com/"><img src="images/vtc.png" alt="EnlightenGAN"></a>
+                            <a href="https://ieeexplore.ieee.org/document/9128612?denied="><img src="images/vtc.png" alt="EnlightenGAN"></a>
                         </div>
                     </div>
                     <div class="col-xs-12 col-md-9 col-lg-8 col-wrapper">
@@ -214,12 +214,12 @@
                 <div class="row align-items-center section-item">
                     <div class="col-xs-12 col-md-3 col-lg-4 col-wrapper">
                         <div class="figure">
-                            <a href="https://arxiv.org/abs/1804.02047"><img src="images/Asilomar.png" alt="PS-GAN"></a>
+                            <a href="https://ieeexplore.ieee.org/abstract/document/9048769?casa_token=U8BcDLYRQ0IAAAAA:5KJViLi4_INb103RU08Sq9WM9jhN4Y5pvZ9qXb4xvvvQbOHiAtJcKibRdwVOHXh5wJXvNC10jQZL"><img src="images/Asilomar.png" alt="PS-GAN"></a>
                         </div>
                     </div>
                     <div class="col-xs-12 col-md-9 col-lg-8 col-wrapper">
                         <div class="title">
-                            <a href="https://ieeexplore.ieee.org/document/9048769?denied=">
+                            <a href="https://ieeexplore.ieee.org/abstract/document/9048769?casa_token=U8BcDLYRQ0IAAAAA:5KJViLi4_INb103RU08Sq9WM9jhN4Y5pvZ9qXb4xvvvQbOHiAtJcKibRdwVOHXh5wJXvNC10jQZL">
                             Joint Position, Orientation and Channel Estimation in Hybrid <br />mmWave MIMO Systems
                           </a>
                         </div>
