--- a/index.html
+++ b/index.html
@@ -10,6 +10,16 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+
+<!-- 
+  <link rel="feed" href="/~htwang/index.xml" type="application/rss+xml" title="Haotao Wang&#39;s Homepage">
+  <link rel="icon" type="image/png" href="/~htwang/img/icon.png">
+ -->
+
+
+
+
+
 	</head>
 	<body class="is-preload">
 
@@ -316,6 +326,9 @@
  -->      
 
 						<li><a href="https://github.com/Wenqing-Zheng"  target="_blank" class="icon brands fa-github"><span class="label">Github</span></a></li>
+
+						<li><a href="https://www.linkedin.com/in/wenqing-zheng-098012176/"  target="_blank" class="icon brands fa-linkedin"><span class="label">Github</span></a></li>
+
 
 						<li><a href="mailto:w.zheng@utexas.edu?subject=Hello%20" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 
