--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
 						<li><a href="mailto:w.zheng@utexas.edu?subject=Hello%20" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 
 				        <li class="nav-item" style="font-size:140%">
-						<a class="nav-link " href="./files/Resume Wenqing Zheng.pdf"  target="_blank"><span>CV</span></a>
+						<a class="nav-link " href="./files/Resume_Wenqing_Zheng.pdf"  target="_blank"><span>CV</span></a>
 				          
 
 				        </li>
