--- a/index.html
+++ b/index.html
@@ -341,6 +341,12 @@
 					<ul class="copyright">
 						<li>The University of Texas at Austin</li><li> <a href="https://vita-group.github.io/group.html" target="_blank"> VITA </a> group</li>
 
+						
+						<script async src="//busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js"></script>
+
+						<span id="busuanzi_container_site_pv">›› <span id="busuanzi_value_site_pv"></span> ‹‹</span>
+
+
 					</ul>
 				</div>
 			</footer>
