--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 						<header class="major">
 							<h1>About Me</h1>
 						</header>
-						<p style="text-align:justify; text-justify:inter-ideograph;font-size:110%">I'm a currently enrolled Ph.D. student at the <a href="https://vita-group.github.io/group.html" target="_blank">VITA</a> group at the University of Texas at Austin under the supervision of Dr. <a href="https://atlaswang.com" target="_blank"> Zhangyang (Atlas) Wang</a>. I obtained my Bachelor's degree from Beijing University of Posts and Telecommunications (BUPT) in June 2018. From August 2018 to December 2020, I worked as a research assistant with professor <a href="https://ece.ncsu.edu/people/ngonzal9/"  target="_blank">Nuria González Prelcic</a> in UT. My current research interests include  graph neural networks, transformers, reinforcement learning and second order optimization. Here is my [<a class="nav-link " href="./files/Resume_Wenqing_Zheng.pdf" target="_blank"><span>CV</span></a>].
+						<p style="text-align:justify; text-justify:inter-ideograph;font-size:110%">I'm a currently enrolled Ph.D. student at the <a href="https://vita-group.github.io/group.html" target="_blank">VITA</a> group at the University of Texas at Austin under the supervision of Dr. <a href="https://atlaswang.com" target="_blank"> Zhangyang (Atlas) Wang</a>. I obtained my Bachelor's degree from Beijing University of Posts and Telecommunications (BUPT) in June 2018. From August 2018 to December 2020, I worked as a research assistant with professor <a href="https://ece.ncsu.edu/people/ngonzal9/"  target="_blank">Nuria González Prelcic</a> in UT. My current research interests include symbolic reasoning, graph neural networks, transformers, reinforcement learning and second order optimization. Here is my [<a class="nav-link " href="./files/Resume_Wenqing_Zheng.pdf" target="_blank"><span>CV</span></a>].
 
 					</section>
 
@@ -63,6 +63,8 @@
         <h2>Interests</h2>
         <ul class="ul-interests" style="font-size:110%">
                    
+          <li>Symbolic Reasoning</li>
+          
           <li>Transformers</li>
 
           <li>Graph Neural Networks</li>
