--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
                                 </a></b>
                         </div>
                         <div class="authors">
-                            Wenqing Zheng, Qiangqiang Guo,  <br />Hao Yang, Peihao Wang, Zhangyang Wang, Accepted by NeurIPS 2021.<br /><br />
+                            Wenqing Zheng, Qiangqiang Guo, Hao Yang, Peihao Wang, <br />Zhangyang Wang, Accepted by NeurIPS 2021.<br /><br />
                         </div>
                     </div>
                 </div>
