--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 				<div class="inner">
 					<a href="#" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
 					<h1><strong>I'm Wenqing Zheng</strong>,</h1>
-					<h1>a Ph.D. student at UT Austin, <a href="https://vita-group.github.io/group.html" target="_blank"> VITA </a> group.</h1>
+					<h1>Ph.D. student at UT Austin, <a href="https://vita-group.github.io/group.html" target="_blank"> VITA </a> group.</h1>
 				</div>
 			</header>
 
