--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 		<ul  style="font-size:110%">
 
 
-            <li>Research Intern, Google Cloud, May 2022 - present
+            <li>Research Intern, Google Cloud, May 2022 - Aug 2022
                 <ul>
                     <li type="circle">Performance prediction, workload and platform matching for cloud computing. </li>
                     <li type="circle">Host(s): Dr. <a href="https://www.linkedin.com/in/liang-zhang-27708578/"  target="_blank">Eric Zhang</a>, Dr. <a href="https://www.linkedin.com/in/qiuyunwang/"  target="_blank">Chelsea Llull</a> </li>
@@ -221,6 +221,27 @@
                     </div>
                 </div>
  -->
+
+
+
+
+                <div class="row align-items-center section-item">
+                    <div class="col-xs-12 col-md-3 col-lg-4 col-wrapper">
+                        <div class="figure">
+                            <a href="https:"><img src="images/paper-figs/coder.png" height="150" width="180" alt="AutoGAN"></a>
+                        </div>
+                    </div>
+                    <div class="col-xs-12 col-md-9 col-lg-8 col-wrapper">
+                        <div class="word">
+                            <b><a href="https:">
+                                Outline, Then Details: Syntactically Guided Coarse-To-Fine Code Generation
+                                </a></b>
+                        </div>
+                        <div class="authors">
+                            Wenqing Zheng, SP Sharan, Ajay Kumar Jaiswal, Kevin Wang, Yihan Xi, <br />Dejia Xu, Zhangyang Wang, International Conference on Machine Learning <br />(ICML), 2023
+                        </div>
+                    </div>
+                </div>
 
 
 
